--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,14 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    transform-style: preserve-3d;
+  
   }
   .card .pic{
     border-radius: 0.85rem;
+    transform: translateZ(20px) translateY(0%) translateX(0%);
+
+
   }
   .card .header {
     color: #122b61;
@@ -42,6 +47,7 @@
     font-weight: 200;
     font-size: 0.85rem;
     line-height: 1.35;
+    
   }
   .card .button {
     position: relative;
@@ -80,4 +86,3 @@
   .card .button:hover::before, .card .button:focus::before {
     filter: blur(20px);
   }
-  
