--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
   }
+  html, body {
+    overscroll-behavior-y: none;
+  }
   
   body {
 
